a few more template refinements

--- a/bibliography/references.bib
+++ b/bibliography/references.bib
@@ -15,3 +15,14 @@
   pages   = {69--84}
 }
 
+@article{hatem2025does,
+  title={How does the onset of offset influence geologic slip rates?},
+  author={Hatem, Alexandra E and Briggs, Richard W and Gold, Ryan D},
+  journal={Seismological Research Letters},
+  volume={96},
+  number={1},
+  pages={363--376},
+  year={2025},
+  publisher={Seismological Society of America}
+}
+
