Test Giscus per-session comments

--- a/topics/reading-list.qmd
+++ b/topics/reading-list.qmd
@@ -2,6 +2,7 @@
 title: "Reading list"
 nocite: |
   @*
+comments: false
 ---
 
 This page lists everything currently in `bibliography/references.bib`.
